Also build the debug/release counter-part of the probe with MSVC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -656,6 +656,9 @@ add_subdirectory(resources)
 if(Qt5LinguistTools_FOUND)
   add_subdirectory(translations)
 endif()
+if(NOT GAMMARAY_PROBE_ONLY_BUILD)
+  add_subdirectory(multibuild)
+endif()
 if(GAMMARAY_BUILD_DOCS)
   add_subdirectory(examples)
   add_subdirectory(docs) # needs to go last, so see all installed headers for the API docs
