--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -33,7 +33,7 @@ if(APPLE) # DYLD_INSERT_LIBRARIES only works with real shared libraries, not mod
     set_target_properties(gammaray_probe PROPERTIES INSTALL_RPATH "@loader_path/../../../Frameworks")
   endif()
 else()
-  add_library(gammaray_probe MODULE ${gammaray_probe_srcs})
+  add_library(gammaray_probe ${GAMMARAY_PLUGIN_TYPE} ${gammaray_probe_srcs})
 endif()
 target_link_libraries(gammaray_probe
   gammaray_core
