Add a static plugin to the test.
This isn't really convenient to use yet, we can probably hide a lot of that
inside the build system.

--- a/tests/manual/CMakeLists.txt
+++ b/tests/manual/CMakeLists.txt
@@ -70,5 +70,5 @@ endif()
 
 if(GAMMARAY_STATIC_PROBE)
   add_executable(staticinjectiontest staticinjectiontest.cpp)
-  target_link_libraries(staticinjectiontest gammaray_probe Qt5::Widgets)
+  target_link_libraries(staticinjectiontest gammaray_probe Qt5::Widgets gammaray_widgetinspector_plugin)
 endif()
