Start of a position info plugin.
For now it's just a proxy that doesn't do anything but passing data
through.

--- a/plugins/positioning/CMakeLists.txt
+++ b/plugins/positioning/CMakeLists.txt
@@ -6,3 +6,13 @@ set(gammaray_positioning_srcs
 gammaray_add_plugin(gammaray_positioning JSON gammaray_positioning.json SOURCES ${gammaray_positioning_srcs})
 target_link_libraries(gammaray_positioning gammaray_core Qt5::Positioning)
 endif()
+
+# proxy geo position info source factory
+set(gammaray_geopositioninfosource_srcs
+  geopositioninfosourcefactory.cpp
+  geopositioninfosource.cpp
+)
+
+add_library(gammaray_geopositioninfosource MODULE ${gammaray_geopositioninfosource_srcs})
+target_link_libraries(gammaray_geopositioninfosource Qt5::Positioning)
+install(TARGETS gammaray_geopositioninfosource DESTINATION ${PROBE_PLUGIN_INSTALL_DIR}/position)
