Basic infrastructure for positioning UI plugin and communication.

--- a/plugins/positioning/CMakeLists.txt
+++ b/plugins/positioning/CMakeLists.txt
@@ -2,6 +2,7 @@
 if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
 set(gammaray_positioning_srcs
   positioning.cpp
+  positioninginterface.cpp
 )
 gammaray_add_plugin(gammaray_positioning JSON gammaray_positioning.json SOURCES ${gammaray_positioning_srcs})
 target_link_libraries(gammaray_positioning gammaray_core Qt5::Positioning)
@@ -14,5 +15,31 @@ set(gammaray_geopositioninfosource_srcs
 )
 
 add_library(gammaray_geopositioninfosource MODULE ${gammaray_geopositioninfosource_srcs})
-target_link_libraries(gammaray_geopositioninfosource Qt5::Positioning)
+target_link_libraries(gammaray_geopositioninfosource
+  Qt5::Positioning
+)
 install(TARGETS gammaray_geopositioninfosource DESTINATION ${PROBE_PLUGIN_INSTALL_DIR}/position)
+
+# ui plugin
+if(GAMMARAY_BUILD_UI)
+  set(gammaray_positioning_ui_srcs
+    positioningwidget.cpp
+    positioninginterface.cpp
+    positioningclient.cpp
+  )
+
+  qt4_wrap_ui(gammaray_positioning_ui_srcs
+    positioningwidget.ui
+  )
+
+  gammaray_add_plugin(gammaray_positioning_ui
+    gammaray_positioning_ui.desktop
+    ${gammaray_positioning_ui_srcs}
+  )
+
+  target_link_libraries(gammaray_positioning_ui
+    gammaray_ui
+    Qt5::Widgets
+    Qt5::Positioning
+  )
+endif()
