Output results into the master build directory.
This enables using the mutli-probe result without installation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -588,8 +588,11 @@ else()
   set(PROBE_PLUGIN_INSTALL_DIR ${PROBE_INSTALL_DIR})
 endif()
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${BIN_INSTALL_DIR})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${LIB_INSTALL_DIR})
+if(NOT GAMMARAY_OUTPUT_PREFIX) # set by multibuild
+  set(GAMMARAY_OUTPUT_PREFIX ${PROJECT_BINARY_DIR})
+endif()
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GAMMARAY_OUTPUT_PREFIX}/${BIN_INSTALL_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GAMMARAY_OUTPUT_PREFIX}/${LIB_INSTALL_DIR})
 
 # set RPATH only when installing to a non-default location and not set in cache
 if(NOT CMAKE_INSTALL_RPATH)
