--- a/inprocessui/CMakeLists.txt
+++ b/inprocessui/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(gammaray_inprocessui MODULE main.cpp)
 target_link_libraries(gammaray_inprocessui gammaray_core gammaray_ui_internal)
 set_target_properties(gammaray_inprocessui PROPERTIES
   PREFIX ""
-  LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/${PROBE_PLUGIN_INSTALL_DIR}"
+  LIBRARY_OUTPUT_DIRECTORY "${GAMMARAY_OUTPUT_PREFIX}/${PROBE_PLUGIN_INSTALL_DIR}"
 )
 
 if(GAMMARAY_INSTALL_QT_LAYOUT)
