--- a/multibuild/CMakeLists.txt
+++ b/multibuild/CMakeLists.txt
@@ -30,6 +30,7 @@ ExternalProject_Add(
   CMAKE_ARGS
     -DCMAKE_BUILD_TYPE=${_build_type}
     -DGAMMARAY_PROBE_ONLY_BUILD=ON
+    -DGAMMARAY_OUTPUT_PREFIX=${CMAKE_BINARY_DIR}
     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
     -DLIB_SUFFIX=${LIB_SUFFIX}
 )
