--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -44,7 +44,7 @@ if(NOT WIN32 AND NOT QNXNTO AND NOT ANDROID)
 endif()
 
 set_target_properties(gammaray_probe PROPERTIES
-  LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/${PROBE_INSTALL_DIR}"
+  LIBRARY_OUTPUT_DIRECTORY "${GAMMARAY_OUTPUT_PREFIX}/${PROBE_INSTALL_DIR}"
 )
 
 if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
