--- a/launcher/injector/CMakeLists.txt
+++ b/launcher/injector/CMakeLists.txt
@@ -10,7 +10,7 @@ if(Qt5Widgets_FOUND OR QT_QTGUI_FOUND)
 
   set_target_properties(gammaray_injector_style
     PROPERTIES PREFIX ""
-    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${PROBE_PLUGIN_INSTALL_DIR}/styles
+    LIBRARY_OUTPUT_DIRECTORY ${GAMMARAY_OUTPUT_PREFIX}/${PROBE_PLUGIN_INSTALL_DIR}/styles
   )
 
   if(GAMMARAY_INSTALL_QT_LAYOUT)
