--- a/plugins/widgetinspector/CMakeLists.txt
+++ b/plugins/widgetinspector/CMakeLists.txt
@@ -8,6 +8,8 @@ set(gammaray_widgetinspector_plugin_srcs
   widgetpaintanalyzerextension.cpp
 
   waextension/widgetattributeextension.cpp
+
+  widget3dmodel.cpp
 )
 
 gammaray_add_plugin(gammaray_widgetinspector_plugin
@@ -20,6 +22,8 @@ target_link_libraries(gammaray_widgetinspector_plugin
   ${QT_QTGUI_LIBRARIES}
   gammaray_kitemmodels
   gammaray_core
+  Qt5::3DCore
+  Qt5::3DRender
 )
 
 # probe export actions
@@ -65,11 +69,19 @@ if(GAMMARAY_BUILD_UI)
     widgetclientmodel.cpp
 
     waextension/widgetattributetab.cpp
+
+    widgetinspectorwidget.cpp
+    widget3dimagetextureimage.cpp
+    widget3dview.cpp
   )
 
   qt4_wrap_ui(gammaray_widgetinspector_ui_plugin_srcs
     widgetinspectorwidget.ui
     waextension/widgetattributetab.ui
+  )
+
+  qt4_add_resources(gammaray_widgetinspector_ui_plugin_srcs
+    assets.qrc
   )
 
   gammaray_add_plugin(gammaray_widgetinspector_ui_plugin
@@ -80,6 +92,12 @@ if(GAMMARAY_BUILD_UI)
 
   target_link_libraries(gammaray_widgetinspector_ui_plugin
     ${QT_QTGUI_LIBRARIES}
+    Qt5::Qml
+    Qt5::3DRender
+    Qt5::3DLogic
+    Qt5::3DInput
+    Qt5::3DQuick
     gammaray_ui
+    gammaray_client
   )
 endif()
