Implement code navigation for QObjects.
Allows for QObjects to navigate to the code location, where they were
created. Not (only) the header file or the class's constructor, but
where the constructor was called from.

This is done by generating a backtrace from
Probe::objectAdded, which is called from the QObject constructor. From
there we can step up to the frame above the object's constructor and
get the source location of that frame.

The stacktrace generation is based on backward-cpp.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -134,6 +134,8 @@ else()
   )
 endif()
 
+add_backward(gammaray_core)
+
 if(NOT GAMMARAY_PROBE_ONLY_BUILD)
   install(TARGETS gammaray_core EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
 
