Implement code navigation for QObjects.
Allows for QObjects to navigate to the code location, where they were
created. Not (only) the header file or the class's constructor, but
where the constructor was called from.

This is done by generating a backtrace from
Probe::objectAdded, which is called from the QObject constructor. From
there we can step up to the frame above the object's constructor and
get the source location of that frame.

The stacktrace generation is based on backward-cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ include(FeatureSummary)
 include(ECMGeneratePriFile)
 include(ECMEnableSanitizers)
 include(GenerateExportHeader)
+include("3rdparty/backward-cpp/BackwardMacros.cmake")
 
 # Exit for blacklisted compilers (those that don't support C++11 very well)
 #  MSVC++ < 2010 aka 10.0 aka 1600
