--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -13,6 +13,7 @@ set(gammaray_common_srcs
   propertysyncer.cpp
   modelevent.cpp
   modelutils.cpp
+  objectidfilterproxymodel.cpp
   paintanalyzerinterface.cpp
   selflocator.cpp
   sourcelocation.cpp
@@ -92,6 +93,7 @@ if(NOT GAMMARAY_PROBE_ONLY_BUILD)
     objectbroker.h
     objectid.h
     objectmodel.h
+    objectidfilterproxymodel.h
     paths.h
     probecontrollerinterface.h
     propertycontrollerinterface.h
