Add infrastructure for a generic enum editor
This adds target-independent abstractions for enum/flag values and
definitions, a central place to collect and manage the definitions,
and ways to send definitions to the client on demand.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -12,6 +12,7 @@ set(gammaray_clientlib_srcs
   messagestatisticsmodel.cpp
   paintanalyzerclient.cpp
   remoteviewclient.cpp
+  enumrepositoryclient.cpp
 )
 
 qt4_add_resources(gammaray_clientlib_srcs ${CMAKE_SOURCE_DIR}/resources/gammaray.qrc)
