--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -19,6 +19,10 @@ set(gammaray_common_srcs
   sourcelocation.cpp
   translator.cpp
 
+  enumdefinition.cpp
+  enumrepository.cpp
+  enumvalue.cpp
+
   remoteviewinterface.cpp
   remoteviewframe.cpp
   transferimage.cpp
