Move enum utility functions into their own file

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -33,6 +33,7 @@ set(gammaray_srcs
   attributemodel.cpp
   qmetaobjectvalidator.cpp
   enumrepositoryserver.cpp
+  enumutil.cpp
 
   propertyadaptor.cpp
   propertyaggregator.cpp
