docs/CMakeLists.txt - minor improvement to status message

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -22,8 +22,8 @@ if(NOT QDOC_EXECUTABLE OR NOT QHELPGEN_EXECUTABLE OR NOT QDOC_TEMPLATE OR NOT QD
   message(STATUS "Unable to build user manual in qch format.")
   message(STATUS "qdoc exectuable: ${QDOC_EXECUTABLE}")
   message(STATUS "qhelpgenerator exectuable: ${QHELPGEN_EXECUTABLE}")
-  message(STATUS "qdoc template: ${QDOC_TEMPLATE}")
-  message(STATUS "qdoc qtcore index: ${QDOC_QTCORE_INDEX}")
+  message(STATUS "qdoc template (qt-html-templates-offline.qdocconf): ${QDOC_TEMPLATE}")
+  message(STATUS "qdoc qtcore index (qtcore.index): ${QDOC_QTCORE_INDEX}")
   set(GAMMARAY_USER_MANUAL_BUILD False)
 else()
   set(GAMMARAY_USER_MANUAL_BUILD True)
