Add syntax highlighting to the resource browser text view

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -469,6 +469,14 @@ set_package_properties(Glslang PROPERTIES URL "https://github.com/KhronosGroup/g
 find_package(QmlLint)
 set_package_properties(QmlLint PROPERTIES URL "https://qt.io" PURPOSE "Validate QML code.")
 
+if(Qt5Core_FOUND)
+  find_package(KF5SyntaxHighlighting NO_MODULE QUIET)
+  set_package_properties(KF5SyntaxHighlighting PROPERTIES TYPE RECOMMENDED URL "https://www.kde.org/" PURPOSE "Syntax highlighting for code editor.")
+  if(TARGET KF5::SyntaxHighlighting)
+    set(HAVE_SYNTAX_HIGHLIGHTING TRUE)
+  endif()
+endif()
+
 #
 # Determine probe ABI
 # this needs to be run after we know exactly what we are building, but is needed for that installation settings
