Add line number side bar

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -44,6 +44,7 @@ set(gammaray_ui_srcs
   propertyeditor/propertytexteditor.cpp
 
   codeeditor/codeeditor.cpp
+  codeeditor/codeeditorsidebar.cpp
 
   tools/localeinspector/localeinspectorwidget.cpp
   tools/messagehandler/messagedisplaymodel.cpp
