Fix build after rebase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -285,7 +285,7 @@ if(Qt5Core_FOUND)
   endif()
 
   # 3D Widget inspector requires Qt3D 5.7
-  if (QtCore_VERSION VERSION_EQUAL 5.7 OR QtCore_VERSION VERSION_GREATER 5.7)
+  if (Qt5Core_VERSION VERSION_EQUAL 5.7 OR Qt5Core_VERSION VERSION_GREATER 5.7)
     find_package(Qt5 5.7 NO_MODULE QUIET OPTIONAL_COMPONENTS
         3DCore
         3DRender
