Install enum related headers needed by the external QtIvi plugin
Also, expand their API docs a bit.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -139,6 +139,8 @@ if(NOT GAMMARAY_PROBE_ONLY_BUILD)
 
   gammaray_install_headers(
     ${CMAKE_CURRENT_BINARY_DIR}/gammaray_core_export.h
+    enumrepositoryserver.h
+    enumutil.h
     metaobject.h
     metaobjectrepository.h
     metaproperty.h
