--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -154,6 +154,7 @@ if(NOT GAMMARAY_PROBE_ONLY_BUILD)
   gammaray_install_headers(
     ${CMAKE_CURRENT_BINARY_DIR}/gammaray_ui_export.h
     clienttoolmanager.h
+    propertyeditor/propertyeditordelegate.h
     propertywidget.h
     propertywidgettab.h
     tooluifactory.h
