Factor library dependency listing out of the ELF probe ABI detector
We'll need that also to handle ASAN using targets correctly in the preload
injector.

--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -12,6 +12,7 @@ set(gammaray_launcher_shared_srcs
   injector/injectorfactory.cpp
   injector/styleinjector.cpp
 
+  libraryutil.cpp
   probeabi.cpp
   probeabidetector.cpp
   probefinder.cpp
