Redesign the widget hierarchy representation
The Widget3DModel running on the server side now returns a tree
from ObjectTreeModel enriched by textures and some other metadata.

On client side we have several proxy models: one that extracts
windows (QWidget::isWindow() == true) and second one that only
displays flattened widget subtree of selected window.

This allows us to represent windows hierarchies separately from
widget hierarchies, allowing for better handling of dialogs etc.

We sometimes hit asserts in KDescendatsProxyModel, when too many
things change at once (like switching tabs in configuration dialogs),
that still has to be investigated. I will probably extend the
Widget3DSubtreeModel to also do the flattening since we can do
many assumptions that the generic KDescendatsProxyModel can't.

--- a/plugins/widgetinspector/CMakeLists.txt
+++ b/plugins/widgetinspector/CMakeLists.txt
@@ -81,6 +81,8 @@ if(GAMMARAY_BUILD_UI)
     set(gammaray_widgetinspector_ui_plugin_srcs
       ${gammaray_widgetinspector_ui_plugin_srcs}
       widget3dview.cpp
+      widget3dwindowmodel.cpp
+      widget3dsubtreemodel.cpp
       widget3dimagetextureimage.cpp
       widget3dcameracontroller.cpp
     )
@@ -109,6 +111,7 @@ if(GAMMARAY_BUILD_UI)
   if (Qt53DCore_FOUND AND NOT Qt53DCore_VERSION VERSION_LESS 5.7)
     target_link_libraries(gammaray_widgetinspector_ui_plugin
         gammaray_client
+        gammaray_kitemmodels
         Qt5::Qml
         Qt5::Quick
         Qt5::3DRender
