Allow to filter out inactive tools in the tool sidebar
The list is getting a bit long when having all possible tools and external
plugins activated/installed.

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -130,6 +130,7 @@ set(gammaray_ui_internal_srcs
   sidepane.cpp
   aboutpluginsdialog.cpp
   mainwindow.cpp
+  clienttoolfilterproxymodel.cpp
   aboutdialog.cpp
 )
 
