--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,7 @@
 
 project(GammaRay CXX C)
 
-if (MSVC)
-  cmake_minimum_required(VERSION 3.1.0) # b/c of TARGET_PDB_FILE_DIR generator expression
-else()
-  cmake_minimum_required(VERSION 2.8.12) # b/c of ECMGeneratePriFile.cmake
-endif()
-
+cmake_minimum_required(VERSION 2.8.12) # b/c of ECMGeneratePriFile.cmake
 cmake_policy(SET CMP0020 NEW)
 if(POLICY CMP0043)
   cmake_policy(SET CMP0043 NEW)
@@ -233,8 +228,8 @@ endif()
 # linker flags
 if(NOT ECM_ENABLE_SANITIZERS AND (CMAKE_SYSTEM_NAME MATCHES Linux OR CMAKE_SYSTEM_NAME STREQUAL GNU))
   if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--fatal-warnings -Wl,--no-undefined -lc ${CMAKE_SHARED_LINKER_FLAGS}")
-    set(CMAKE_MODULE_LINKER_FLAGS "-Wl,--fatal-warnings -Wl,--no-undefined -lc ${CMAKE_MODULE_LINKER_FLAGS}")
+    set(CMAKE_SHARED_LINKER_FLAGS "-Wl, -lc ${CMAKE_SHARED_LINKER_FLAGS}")
+    set(CMAKE_MODULE_LINKER_FLAGS "-Wl, -lc ${CMAKE_MODULE_LINKER_FLAGS}")
   endif()
 endif()
 
