--- a/docs/manual/gammaray-manual-online.qdocconf.in
+++ b/docs/manual/gammaray-manual-online.qdocconf.in
@@ -1,2 +1,15 @@
 include(@CMAKE_CURRENT_BINARY_DIR@/gammaray-manual.qdocconf)
+
+HTML.footer = \
+    "   </div>\n" \
+    "   <p class=\"copy-notice\">\n" \
+    "   <acronym title=\"Copyright\">&copy;</acronym> 2016 Klar&auml;lvdalens Datakonsult AB (KDAB).\n" \
+    "   Documentation contributions included herein are the copyrights of\n" \
+    "   their respective owners.<br/>" \
+    "   This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-sa/4.0/\">Creative Commons Attribution-ShareAlike 4.0 International License</a>." \
+    "   </p>\n"
+
+# Sidebar with quick links
+HTML.stylesheets += style/qt5-sidebar.html
+
 include(@QDOC_TEMPLATE_DIR@/qt-html-templates-online.qdocconf)
