Toggle the invisible items from the picking list
Task-Id: KDEND-101, KDEND-102

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -16,6 +16,7 @@ set(gammaray_ui_srcs
   propertywidget.cpp
   propertywidgettab.cpp
   proxytooluifactory.cpp
+  visibilityfilterproxymodel.cpp
   splashscreen.cpp
   searchlinecontroller.cpp
   tooluifactory.cpp
