Restore compatibility with Qt < 5.7

--- a/docs/manual/gammaray-manual.qdocconf.in
+++ b/docs/manual/gammaray-manual.qdocconf.in
@@ -30,3 +30,6 @@ qhp.GammaRay.subprojects.manual.type = manual
 navigation.homepage    = "GammaRay User Manual"
 navigation.landingpage = "GammaRay User Manual"
 buildversion = "GammaRay User Manual @GAMMARAY_VERSION_STRING@"
+
+# backward compatibility with Qt < 5.7
+macro.borderedimage = "\\div {class=\"border\"} \\image \1\n\\enddiv"
