no charm.ico file, replace by GammaRay.ico, set ICONS_DIR directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -732,14 +732,15 @@ set(CPACK_DEBIAN_PACKAGE_SECTION "Development")
 
 set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/${README_FILE}")
 if(WIN32)
+  set(ICONS_DIR "${CMAKE_SOURCE_DIR}/resources")
   set(CPACK_GENERATOR "NSIS" "ZIP")
   set(CPACK_PACKAGE_EXECUTABLES "GammaRay" "GammaRay")
   set(CPACK_PACKAGE_INSTALL_DIRECTORY "GammaRay")
   set(CPACK_PACKAGE_FILE_NAME "GammaRay ${GAMMARAY_VERSION}")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/${LICENSE_FILE}")
   set(CPACK_NSIS_EXECUTABLES_DIRECTORY "${BIN_INSTALL_DIR}")
-  set(CPACK_NSIS_MUI_ICON "${ICONS_DIR}/Charm.ico")
-  set(CPACK_PACKAGE_ICON "${ICONS_DIR}\\\\CharmNSISHeader.bmp")
+  set(CPACK_NSIS_MUI_ICON "${ICONS_DIR}/GammaRay.ico")
+  #set(CPACK_PACKAGE_ICON "${ICONS_DIR}\\\\CharmNSISHeader.bmp")
   set(CPACK_NSIS_URL_INFO_ABOUT "https://www.kdab.com/")
   set(CPACK_NSIS_INSTALLED_ICON_NAME "GammaRay${CMAKE_EXECUTABLE_SUFFIX}")
   set(CPACK_NSIS_MENU_LINKS
